# tams_motorhand

./: README.md
tams_motorhand/: CMakeLists.txt  package.xml
tams_motorhand/launch/: gazebo.launch  hand.launch  hand_no_controllers.launch  hand_on_trixi.launch  hand_stub_on_trixi.launch  left_pst_hand_in_ns.launch  left_pst_hand_only.launch  left_pst_hand_standalone.launch  moveit_demo.launch  right_biotac_hand.launch  right_biotac_hand_in_ns.launch  right_biotac_hand_moveit_demo.launch  right_biotac_hand_no_controllers.launch  right_biotac_hand_standalone.launch  right_biotac_hand_standalone_gazebo.launch  right_biotac_hand_standalone_moveit_demo.launch  right_biotac_hand_standaloneno_controllers.launch  right_biotac_hand_stub_on_trixi.launch  srhand.launch
tams_motorhand/scripts/: control_effort  control_trajectory  detect_unresponsive_hand.py  filter_invalid_joint_states.py  hand_stub.py  spread_hand.py  stop_mfj4_controller.py  switch_control_fast
tams_motorhand_description/: CMakeLists.txt  package.xml
tams_motorhand_description/launch/: tams_motorhand_upload.launch
tams_motorhand_description/robots/: tams_motorhand.urdf.xacro  tams_motorhand_standalone.urdf.xacro  tams_trixi_motorhand.urdf.xacro
tams_motorhand_description/urdf/: biotac.urdf.xacro  tams_motorhand.urdf.xacro
