<?xml version="1.0"?>
<package>
  <name>tams_motorhand_description</name>
  <version>0.0.0</version>
  <description>The tams_motorhand_description package</description>

  <maintainer email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
